--- a/Hangfire-Explorer.Application/Hangfire-Explorer.Application.csproj
+++ b/Hangfire-Explorer.Application/Hangfire-Explorer.Application.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.7.22" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
   </ItemGroup>
 
