--- a/Hangfire-Explorer/Hangfire-Explorer.csproj
+++ b/Hangfire-Explorer/Hangfire-Explorer.csproj
@@ -6,7 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.22" />
+    <PackageReference Include="Hangfire.Mongo" Version="0.7.20" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hangfire-Explorer.Application\Hangfire-Explorer.Application.csproj" />
   </ItemGroup>
 
 </Project>
